# PHX_xlwg

./: .gitignore  CLAUDE.md  HANDOFF.md  pyproject.toml
docs/: PHX_xlwg-strategy-and-routines.md  strategy-and-routines.md
phpp-field-mapping/: EN_10_6_IP.md  EN_10_6_SI.md
scripts/: roundtrip.py  verify_excel.py
src/compare_json/: cli.py  compare.py
src/phpp_tool/: cli.py  excel_app.py  locators.py  map_parser.py  models.py  reader.py  surgical_writer.py  writer.py
tests/: conftest.py  test_cli.py  test_map_parser.py  test_models.py  test_surgical_writer.py
